# AI-TRADING-APP

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  adr0042_manifest.json  docker-compose.frontend-nginx.yml  docker-compose.prod.yml  docker-compose.yml  start-claude.bat  verify_schema.py
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/src/agent/: __init__.py  __main__.py  backend_client.py  budget.py  config.py  llm_call.py  mcp_client.py  proposal_generation.py  server.py
apps/agent/tests/: test_branch_protection_probe.py  test_budget.py  test_llm_call.py  test_no_db_access.py  test_proposal_generation.py  test_server.py
apps/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 045280f6aa2d_p1s4_orders_fills_positions_risk_limits_.py  0e039e08250e_p3_agent_sessions_agent_messages_agent_.py  3f9a2b1c8d4e_p5_session1_broker_mode.py  656c0c6d51b1_p0_initial_schema.py  67233e8aac68_p1s2_accounts_state_cache_table.py  8c1e26e3d0a6_p5_s3_users_password_hash_totp_sessions_.py  9d2e7b3a1f5c_p5_5_s1_trading_profiles.py  a1c3e5f7b9d2_p12_5_equity_snapshots.py  a3d9f1c4b7e2_p6_s1a_agent_infrastructure.py  a4b6c8d0e2f4_mkt_proj_training_rows.py  a4c7e1b93d20_reservation_position_anchor.py  a4c7e1f9d2b8_risk_capacity_state.py  a4c7e9b2f1d6_p7_s4_authoring_method.py  a7c4e1b9d3f2_benchmark_snapshots.py  b3d8f1a2c7e9_p11_s3_reconciliation_runs.py  b3f8c2d1e9a7_p5_5_s2_morning_briefs.py  b5c7d9e1f3a5_mkt_proj_model_registry.py  b6d1f4a8c3e2_p7_s5_strategy_revisions.py  b6d2f4a9c1e7_adr0043_loss_control_schema.py  b7e3c1a9f5d2_p5_s4_user_credentials.py  b7f3a9c2e1d8_journal_notes.py  bdd6fe959f89_p4_strategies_has_pending_reload_.py  c1d4e8f2a6b9_ops_pipeline_health.py  c1f4a7d2e8b3_day_change_basis.py  c2f5a8d31e7b_p8_s2_scanner.py  c3d5e7f9a1b2_range_execution_records.py  c3f8a1e7d24b_account_performance_inception.py  c4d8e2f1a6b9_p5_s5_circuit_breaker_risk_gates.py  c4e9a1b7f3d2_adr0043_shadow_outcome.py  c4e9a2b7d1f3_p11_s4_replay_runs.py  c5e1a2b3f4d6_p6b_s2a_paper_variant_parent_fk.py  c6d8e0f2a4b6_mkt_proj_runs.py  d3a8e1f6c2b9_p8_s4_scheduled.py  d3f6a1c8b2e4_strategy_slot_claims.py  d4e8f2a6c9b1_strategy_state.py  d5a9b3e7c2f1_p5_s6_strategy_cooldown.py  d7f4a9c2e1b8_p6b_s3a_promotion_lifecycle.py  dd3f2a924c0c_p4_2_backtest_jobs_table.py  e1f6b4c9a8d3_p5_s7_live_activation_initiated_at.py  e5b2c9d7f1a3_risk_decision_ledger.py  (+9 more)
apps/backend/app/: config.py  deps.py  lifespan.py  main.py
apps/backend/app/agent/: __init__.py  anthropic_client.py  pricing.py  runtime.py
apps/backend/app/alerts/: throttle.py
apps/backend/app/altdata/: __init__.py  event_study.py  insider_monitor.py  insider_program.py  matched_control.py  reference_only.py  security_master.py  signal.py  source_registry.py  validate.py
apps/backend/app/api/: healthz.py  metrics.py
apps/backend/app/audit/: __init__.py  logger.py
apps/backend/app/auth/: __init__.py  future.py  internal.py  passwords.py  stub.py  tokens.py  totp.py
apps/backend/app/brokers/: __init__.py  base.py  registry.py
apps/backend/app/db/: enums.py  session.py
apps/backend/app/events/: bus.py
apps/backend/app/factor_data/: __init__.py  accessor.py  backtest.py  candidate_engine.py  config.py  evidence.py  gapper_intraday.py  gapper_shadow.py  portfolio.py  premarket_adapter.py  regime.py  store.py  total_return.py  universe.py
apps/backend/app/indicators/: __init__.py  computer.py
apps/backend/app/jobs/: __init__.py  activation_completion.py  breaker_monitor.py  gapper_intraday_cache.py  gapper_shadow_ledger.py  insider_reference_monitor.py  llm_opt_in_completion.py  market_projection_jobs.py  metrics_snapshot.py  morning_brief_generation.py  native_gapper_scan.py  premarket_backfill_scheduled.py  premarket_gate.py  premarket_scan_scheduled.py  promotion_completion.py  scheduled_scans.py  scheduler_heartbeat.py
apps/backend/app/llm/: __init__.py  anthropic_client.py  runtime.py  system_prompt.py
apps/backend/app/market/: __init__.py  session.py
apps/backend/app/market_data/: alpaca_distributions.py  bar_cache.py  discovery.py  quotes.py
apps/backend/app/observability/: __init__.py  audit_hash.py  metrics.py  redact.py
apps/backend/app/ops/: __init__.py  confidence.py  kpis.py  (+4 more)
apps/backend/data/: combined_book_symbols.txt  risk_profile_symbols.txt
apps/backend/scripts/: adopt_legacy_operational_hold.py  adr0042_canary.py  adr0042_canary_lib.py  adr0042_canary_run.py  adr0042_churn_to_breach.py  adr0042_concurrency_worker.py  adr0042_make_manifest.py  adr0042_preflight.py  adr0043_canary_lib.py  adr0043_canary_run.py  adr0043_canary_scaffold.py  adr0043_churn_driver.py  adr0043_install_canary_credentials.py  adr0043_reachability.py  adr0043_session_open.py  aggregate_lag_fragility.py  analyze_govcontract_missingness.py  apply_profile_vol_scaling.py  backtest_momentum_overlays.py  backtest_momentum_stage1_regression.py  backtest_momentum_stage2.py  backtest_momentum_stage3.py  backtest_momentum_stage4.py  backtest_momentum_window.py  backtest_range_trader_alpaca.py  backtest_range_trader_sweep.py  backtest_range_trader_synthetic.py  build_spy_fixture.py  calibrate_govcontract_lag.py  candidate_engine.py  candidate_engine_v0_2.py  candidate_engine_v0_3.py  candidate_engine_v0_4.py  candidate_engine_v0_5.py  cap020_regime_validation.py  check_adr0043_coverage.py  check_agent_no_db_access.sh  check_alembic_single_head.py  check_altdata_order_path_isolation.sh  check_audit_immutability.sh  (+181 more)
apps/backend/tests/: conftest.py  test_account.py  test_account_stub.py  test_adr_0002_invariant.py  test_health.py  test_internal_ping.py  test_p6b_3a_schema.py  test_performance_inception.py  test_ws_heartbeat.py
apps/mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/mcp-server/tests/: test_client_auth.py  test_server_integration.py  test_tools_catalog.py  test_tools_system.py
apps/mcp-workbench/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
apps/mcp-workbench/tests/: test_tools.py
(+2093 files in other folders)
