[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-workbench-backend"
version = "0.0.1"
description = "Trading Workbench backend (FastAPI + SQLAlchemy + Alembic)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jay Wang" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "alpaca-py>=0.30.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    # pandas-ta 0.3.x has no Python 3.13 wheel; 0.4.x is a beta rewrite with the
    # same functional surface (ta.sma/ema/rsi/macd/atr/vwap/bbands). Pinning to
    # the latest known-good beta — the golden test in tests/indicators/ catches
    # any regression if we bump.
    "pandas-ta>=0.4.71b0,<0.5.0",
    "pyarrow>=15.0.0,<20.0.0",
    # P4 §4: filesystem watcher for strategy hot-reload. Already pulled in
    # transitively by uvicorn[standard]; pin here so a future uvicorn bump
    # can't silently drop the dep the watcher service depends on.
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's `Depends(...)` in argument defaults is the documented idiom.
"app/api/**/*.py" = ["B008"]
# Migrations are auto-generated by Alembic and shouldn't be hand-formatted.
# script.py.mako emits modern style today (PEP 604 unions, collections.abc),
# but pin this ignore so a future Alembic upgrade that regenerates the
# template — or a hand-authored migration — can't break CI with stylistic
# nits we'd never edit. Behavioral lints (F, E, W, B) still apply.
"alembic/versions/*.py" = ["UP007", "UP035", "UP006", "I001"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/auth/future.py"]
