[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-workbench-backend"
version = "0.0.1"
description = "Trading Workbench backend (FastAPI + SQLAlchemy + Alembic)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jay Wang" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "alpaca-py>=0.30.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    # pandas-ta 0.3.x has no Python 3.13 wheel; 0.4.x is a beta rewrite with the
    # same functional surface (ta.sma/ema/rsi/macd/atr/vwap/bbands). Pinning to
    # the latest known-good beta — the golden test in tests/indicators/ catches
    # any regression if we bump.
    "pandas-ta>=0.4.71b0,<0.5.0",
    "pyarrow>=15.0.0,<20.0.0",
    # MKT-PROJ-001 (§0, owner-approved 2026-07-10): calibrated classifiers +
    # walk-forward validation for the Market Projection Engine. Pure library,
    # no external service, no runtime network use (Q1 of the implementation plan).
    "scikit-learn>=1.5,<2.0",
    # MKT-PROJ-001 final review 2026-07-10: authoritative NYSE calendar so the
    # historical labeler (§1) and production close-15m scheduling agree on
    # holidays/half-days. MarketSession already prefers it when installed
    # (curated fallback otherwise).
    "pandas-market-calendars>=4.4,<6.0",
    # P4 §4: filesystem watcher for strategy hot-reload. Already pulled in
    # transitively by uvicorn[standard]; pin here so a future uvicorn bump
    # can't silently drop the dep the watcher service depends on.
    "watchfiles>=0.21",
    # P3 §3: Anthropic SDK for the agent runtime (app/agent/). Importing
    # this outside that allowlisted location trips check_no_llm_in_order_path.sh
    # (see docs/adr/0006-llm-not-in-order-path.md).
    "anthropic>=0.40.0,<1.0.0",
    # P5 §3: multi-user authentication. bcrypt for password hashing (cost 12),
    # pyotp for RFC 6238 TOTP, qrcode[pil] to render the enrollment QR PNG.
    "bcrypt>=4.1,<6.0",
    "pyotp>=2.9,<3.0",
    "qrcode[pil]>=7.4,<9.0",
    # EmailStr in the /auth/login schema requires email-validator.
    "email-validator>=2.0,<3.0",
    # P5 §4: credential encryption at rest. Fernet (AES-128-CBC + HMAC-SHA256)
    # backs app/security/crypto.py. ONLY app/security/ and alembic/versions/
    # may import this directly (check_no_env_credentials.sh adjacent invariant).
    "cryptography>=42.0,<46.0",
    # P5 §8: Prometheus /metrics exposition (app/observability/metrics.py).
    "prometheus-client>=0.20,<1.0",
    # ADR 0017: route outbound TLS verification through the OS trust store so a
    # TLS-inspecting proxy (e.g. Norton on the dev's Windows box) whose root is
    # in the OS store but not in certifi doesn't break Alpaca/Anthropic HTTPS.
    # Pure-Python, stdlib-only deps. See app/utils/tls_trust.py.
    "truststore>=0.9,<1.0",
    # P9 §1: local point-in-time factor-data store (app/factor_data/). DuckDB is
    # an embedded analytical engine — the survivorship-free Sharadar SEP/TICKERS
    # spine lives in data/factor_data.duckdb (gitignored). Read-only data path:
    # it never imports the order path/risk engine (ADR 0018).
    "duckdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's `Depends(...)`/`Cookie(...)` in argument defaults is the documented
# idiom. app/auth/stub.py holds the get_current_user dependency (P5 §3).
"app/api/**/*.py" = ["B008"]
"app/auth/stub.py" = ["B008"]
# Migrations are auto-generated by Alembic and shouldn't be hand-formatted.
# script.py.mako emits modern style today (PEP 604 unions, collections.abc),
# but pin this ignore so a future Alembic upgrade that regenerates the
# template — or a hand-authored migration — can't break CI with stylistic
# nits we'd never edit. Behavioral lints (F, E, W, B) still apply.
"alembic/versions/*.py" = ["UP007", "UP035", "UP006", "I001"]
# Research reproduction scripts are exploratory one-off artifacts written in a dense inline
# style (semicolons, compact one-liners). Exempt the stylistic multi-statement/import nits;
# behavioral lints (F821 undefined names, unused imports, B-series) still apply so a broken
# repro script still fails CI.
"scripts/research/**/*.py" = ["E701", "E702", "E703", "E401", "E741", "W291", "F541", "B905"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    # P5 §3: opt out of the autouse get_current_user override so the test
    # exercises the real cookie/session login flow.
    "real_auth: test drives real authentication (no get_current_user override)",
]

[tool.coverage.run]
source = ["app"]
