[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-workbench"
version = "0.0.1"
description = "Trading Workbench state MCP server (read-only tools for Claude Code / Desktop)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jay Wang" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "anyio>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest-httpx>=0.30",
]

[project.scripts]
mcp-workbench = "mcp_workbench.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
